client/src/pages/styles.css
/* ... */
.activity-description {
    text-align: left;
}

.activity-description h3 {
    margin: 0;
    padding: 0;
    margin-left: 20px;
}

.activity-description h4 {
    margin: 0;
    padding: 0;
    text-align: left;
    margin-left: 20px;
    font-weight: 500;
}

.activity-properties {
    display: flex;
    flex-direction: column;
    margin: 10px;
    border: 1px solid #D9D9D9;
    padding: 20px;
    border-radius: 10px;
}

.activity-properties h3 {
    margin: 0;
    padding: 0;
}

.activity-properties p {
    margin: 0;
    padding: 0;
}

.activity-properties-info ul {
    display: flex;
    flex-direction: column;
    list-style-type: none;
    margin-left: 0;
    padding: 0;
}

.activity-properties-info ul li {
    display: flex;
    flex-direction: row;
    list-style-type: none;
    justify-content: space-between;
    margin: 10px;
    margin-left: 0
}

.tag-section {
    display: flex;
    flex-direction: column;
    text-align: left;
    width: 100%;
}

.activity-properties-tag {
    margin-top: 30px;
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
}

.tag {
    border: 1px solid #D9D9D9;
    padding-left: 10px;
    padding-right: 10px;
    padding-top: 5px;
    padding-bottom: 5px;
    border-radius: 10px;
    background-color: #D9D9D9;
}

.activity-buttons {
    display: flex;
    flex-direction: column;
    margin: 10px;
    border: 1px solid #D9D9D9;
    border-radius: 10px;
    padding: 15px;
}

.activity-buttons h3 {
    margin: 0;
    margin-left: 10px;
    text-align: left;
}

.activity-buttons button {
    margin: 5px;
    margin-top: 10px;
}


.icon-image {
    height: 20px;
    width: 20px;
}


.button {
    display: flex;
    justify-content: center; 
}

.button p {
    margin: 0;
    margin-left: 10px;
    color: white;
}

.complete-button {
    background-color: black;
}

.complete-button img {
    border-radius: 50%;
}

.delete-button   {
    background-color: red;
}

.edit-task {
    text-align: left;
    padding: 0;
}

.edit-activity-form {
    margin: 10px;
    width: 85%;
}

.edit-activity-form-section {
    display: flex;
    flex-direction: column;
    align-items: left;
}

.edit-activity-form-section label {
    margin-top: 10px;
}

.edit-activity-form-section input {
    border: none;
    background-color: #f3f3f5;
    border-radius: 5px;
    padding-left: 10px;
    height: 35px;
    font-size: 15px;
}

.edit-activity-form-section textarea{
    border: none;
    background-color: #f3f3f5;
    border-radius: 5px;
    padding: 10px;
    height: 50px;
    font-size: 15px;
}

.edit-activity-form-section select {
    border: none;
    background-color: #f3f3f5;
    border-radius: 5px;
    height: 35px;
    font-size: 15px;
}



/*Add Activity styles*/

.back-button-text {
    margin: 0;
    border: none;
    padding: 0;
}


/*Chat page interface*/
.dialogue-sections {
    margin: 10px;
    margin-top: 40px;
    border-radius: 10px;
    padding: 10px;
    padding-top: 15px;
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: white;
}

.head-section {
    border-bottom: 1px solid #D9D9D9;
    border-top: 1px solid #D9D9D9;
    position: fixed;
    margin-top: 0px;
    width: 100%;
    background-color: white;
    text-align: center;
}

.head-section h3 {
    margin: 0;
    margin-top: 5px;
}

.head-section h4 {
    margin-top: 5px;
    font-weight: 500;
}

.messages-section {
    margin-top: 95px;
    margin-bottom: 100px;
    width: 95vw;
    display: flex;
    flex-direction: column;
}

.chat-input {
    margin: 0;
    padding: 0;
    margin-top: 10px;
    display: flex;
    justify-content: space-between;
    position: fixed;
    width: 100%;
    box-sizing: border-box;
    bottom: 0;
    padding-top: 10px;
    padding-bottom: 10px;
    padding-right: 5%;
    padding-left: 5%;
    background-color: white;
    align-items: center;
}

.chat-input button {
    height: 40px;
    border: none;
    outline: none;
    background: none;
    padding-left: 0;
    padding-top: 0;
}

.chat-input button img {
    width: 40px;
    height: 40px;
}

.chat-input textarea {
    height: 40px;
    width: 100%;
    border: none;
    background-color: #D9D9D9;
    border-radius: 5px;
    padding: 10px;
    outline: none;
}

.file-input {
    margin: 5px;
    margin-left: 0;
    margin-right: auto;
    height: 80px;
    width: 100%;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    background-color: #D9D9D9;
    border-radius: 5px;
    border-left: none;
    margin-right: 10px;
    font-size: 16px;
}

.file-input input {
    display: none;
    margin-right: 5px;
}

.file-input img{
    height: 40px;
    width: 40px;
    margin-right: 5px;
}


/*Spinner Styles*/

.spinner {
    width: 16px;
    height: 16px;
    border: 2px solid #f3f3f3;
    border-top: 2px solid #3498db;
    border-radius: 50%;
    animation: spin 1s linear infinite;
}

@keyframes spin {
    0% { transform: rotate(0deg);}
    100% { transform: rotate(360deg); }
}

.signup-button {
  position: relative;
  padding: 8px 20px;
  font-size: 16px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.disabled {
    pointer-events: none;
    user-select: none;
    opacity: 0.8;
}

